Added some changes